<resources>
    <string name="app_name">CalQlator</string>
    <string name="label_name">CalQlator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    // button number 0 - 9
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>

    // button mark
    <string name="mark1">+</string>
    <string name="mark2">-</string>
    <string name="mark3">*</string>
    <string name="mark4">/</string>
    <string name="mark5">C</string>
    <string name="mark6">=</string>

</resources>
